[gd_scene load_steps=5 format=3 uid="uid://c3re6bps4hbt8"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_76kr1"]
[ext_resource type="Texture2D" uid="uid://cltm4mawnfgm1" path="res://Assets/Sprites/preview.png" id="2_k03w6"]

[sub_resource type="LabelSettings" id="LabelSettings_qw56d"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_iqr1i"]
font_size = 32

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_76kr1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k03w6")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -453.0
offset_top = -317.0
offset_right = 453.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.235294, 0.341176, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -221.0
offset_top = 109.0
offset_right = 221.0
offset_bottom = 188.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_qw56d")

[node name="Text" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -415.5
offset_top = -157.0
offset_right = 415.5
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
text = "The AI Uprising was too much to handle."
label_settings = SubResource("LabelSettings_iqr1i")

[node name="PlayAgain" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -38.0
offset_right = 90.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "PLAY AGAIN"

[node name="MainMenu" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = 106.0
offset_right = 76.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Main Menu"

[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
